added packages, changed structure

--- a/project/index.html
+++ b/project/index.html
@@ -7,7 +7,8 @@
     <title>CSS Course</title>
     <link href="https://fonts.googleapis.com/css?family=Oswald:400,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="assets/css/main.css">
+    <link rel="stylesheet" href="assets/css/shared.css">
 </head>
 <body>
   <header class="main-header">
