--- a/project/packages/index.html
+++ b/project/packages/index.html
@@ -7,6 +7,7 @@
     <title>CSS Course</title>
     <link href="https://fonts.googleapis.com/css?family=Oswald:400,700" rel="stylesheet">
     <link rel="stylesheet" href="../assets/css/shared.css">
+    <link rel="stylesheet" href="../assets/css/packages.css">
 </head>
 <body>
   <header class="main-header">
@@ -31,19 +32,41 @@
   </header>
 
   <main>
-
+    <section>
+        <a href="#">
+            <h1>Our PLUS Plan</h1>
+            <h2>The most popular choice of our customers.</h2>
+            <p>Benefit from increased storage and faster support to ensure that your mission-critical data and applications
+                are always available!</p>
+        </a>
+    </section>
+    <section>
+        <a href="#">
+            <h1>Our FREE Plan</h1>
+            <h2>An extremely solid start into our hosting world.</h2>
+            <p>Get started immediately at zero cost!</p>
+        </a>
+    </section>
+    <section>
+        <a href="#">
+            <h1>Our PREMIUM Plan</h1>
+            <h2>All your enterprise needs. Instant support, guaranteed uptime. </h2>
+            <p>The best solution for small to large enterprises. Because hosting shouldn't be in the way!</p>
+        </a>
+    </section>
   </main>
+
   <footer class="main-footer">
-        <nav>
-            <ul class="main-footer__links">
-                <li class="main-footer__link">
-                    <a href="#">Support</a>
-                </li>
-                <li class="main-footer__link">
-                    <a href="#">Terms of Use</a>
-                </li>
-            </ul>
-        </nav>
-    </footer>
+    <nav>
+        <ul class="main-footer__links">
+            <li class="main-footer__link">
+                <a href="#">Support</a>
+            </li>
+            <li class="main-footer__link">
+                <a href="#">Terms of Use</a>
+            </li>
+        </ul>
+    </nav>
+  </footer>
 </body>
 </html>
