--- a/project/packages/index.html
+++ b/project/packages/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="../assets/css/packages.css">
 </head>
 <body>
+  <div class="background"></div>
   <header class="main-header">
     <div>
       <a class="main-header__brand" href="../index.html">
@@ -36,6 +37,7 @@
         <a href="#">
             <h1 class="package__title">Our PLUS Plan</h1>
             <h2 class="package__subtitle">The most popular choice of our customers.</h2>
+            <h3 class="package__badge">RECOMMENDED</h3>
             <p class="package__text">Benefit from increased storage and faster support to ensure that your mission-critical data and applications
                 are always available!</p>
         </a>
