positioning background done logo added starting customers

--- a/project/index.html
+++ b/project/index.html
@@ -14,7 +14,7 @@
   <header class="main-header">
     <div>
       <a class="main-header__brand" href="index.html">
-        uHost
+        <img src="assets/images/uhost-icon.png" alt="uHost - your favourite hosting company">
       </a>
     </div>
     <nav class="main-nav">
