--- a/project/customers/index.html
+++ b/project/customers/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>CSS Course</title>
+    <link rel="shortcut icon" href="../assets/images/favicon.png">
     <link href="https://fonts.googleapis.com/css?family=Oswald:400,700" rel="stylesheet">
     <link rel="stylesheet" href="../assets/css/shared.css">
     <link rel="stylesheet" href="../assets/css/customers.css">
@@ -31,7 +32,35 @@
       </ul>
     </nav>
   </header>
-
+  <main>
+      <div>
+          <div class="testimonial" id="customer-1">
+              <div class="testimonial__image-container">
+                  <img src="../assets/images/customer-1.jpg" alt="Mike Statham - Customer" class="testimonial__image">
+              </div>
+              <div class="testimonial__info">
+                  <h1 class="testimonial__name">Mike Statham</h1>
+                  <h2 class="testimonial__subtitle">Founder of
+                      <a href="tech-analysis.com">tech-analysis.com</a>
+                  </h2>
+                  <p class="testimonial__text">uHost helped me realize my project with a highly constrained budget in like no time.</p>
+              </div>
+          </div>
+          <div class="testimonial" id="customer-2">
+              <div class="testimonial__info">
+                  <h1 class="testimonial__name">John Mellow</h1>
+                  <h2 class="testimonial__subtitle">Hosts his private videos on uHost.
+                  </h2>
+                  <p class="testimonial__text">I worked as a blogger and always looked for an integrated hosting and file storage solution. I found
+                      it in uHost!
+                  </p>
+              </div>
+              <div class="testimonial__image-container">
+                  <img src="../assets/images/customer-2.jpg" alt="John Mellow - Customer" class="testimonial__image">
+              </div>
+          </div>
+      </div>
+  </main>
   <footer class="main-footer">
     <nav>
         <ul class="main-footer__links">
