--- a/project/packages/index.html
+++ b/project/packages/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="../assets/css/packages.css">
 </head>
 <body>
+  <div class="backdrop"></div>
   <div class="background"></div>
   <header class="main-header">
     <div>
