--- a/project/customers/index.html
+++ b/project/customers/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
   <div class="backdrop"></div>
-  <div class="background"></div>
+  <!-- <div class="background"></div> -->
   <header class="main-header">
     <div>
       <a class="main-header__brand" href="../index.html">
