--- a/project/index.html
+++ b/project/index.html
@@ -13,6 +13,13 @@
 </head>
 <body>
   <div class="backdrop"></div>
+  <div class="modal">
+    <h1 class="modal__title">Do you want to continue?</h1>
+    <div class="modal__actions">
+      <a href="../start-hosting/index.html" class="modal__action">Yes!</a>
+      <button class="modal__action modal__action--negative" type="button" name="button">No!</button>
+    </div>
+  </div>
   <header class="main-header">
     <div>
       <a class="main-header__brand" href="index.html">
