--- a/project/customers/index.html
+++ b/project/customers/index.html
@@ -15,6 +15,11 @@
   <!-- <div class="background"></div> -->
   <header class="main-header">
     <div>
+      <button class="toggle-button">
+          <span class="toggle-button__bar"></span>
+          <span class="toggle-button__bar"></span>
+          <span class="toggle-button__bar"></span>
+      </button>
       <a class="main-header__brand" href="../index.html">
         <img src="../assets/images/uhost-icon.png" alt="uHost - your favourite hosting company">
       </a>
@@ -33,6 +38,19 @@
       </ul>
     </nav>
   </header>
+  <nav class="mobile-nav">
+    <ul class="mobile-nav__items">
+      <li class="mobile-nav__item">
+        <a href="../packages/index.html">Packages</a>
+      </li>
+      <li class="mobile-nav__item">
+        <a href="index.html">Customers</a>
+      </li>
+      <li class="mobile-nav__item mobile-nav__item--cta">
+        <a href="../start-hosting/index.html">Start Hosting</a>
+      </li>
+    </ul>
+  </nav>
   <main>
       <div>
           <div class="testimonial" id="customer-1">
@@ -74,5 +92,6 @@
         </ul>
     </nav>
   </footer>
+  <script src="../assets/js/shared.js" charset="utf-8"></script>
 </body>
 </html>
