--- a/project/index.html
+++ b/project/index.html
@@ -22,6 +22,11 @@
   </div>
   <header class="main-header">
     <div>
+      <button class="toggle-button">
+          <span class="toggle-button__bar"></span>
+          <span class="toggle-button__bar"></span>
+          <span class="toggle-button__bar"></span>
+      </button>
       <a class="main-header__brand" href="index.html">
         <img src="assets/images/uhost-icon.png" alt="uHost - your favourite hosting company">
       </a>
@@ -40,7 +45,19 @@
       </ul>
     </nav>
   </header>
-
+  <nav class="mobile-nav">
+    <ul class="mobile-nav__items">
+      <li class="mobile-nav__item">
+        <a href="packages/index.html">Packages</a>
+      </li>
+      <li class="mobile-nav__item">
+        <a href="customers/index.html">Customers</a>
+      </li>
+      <li class="mobile-nav__item mobile-nav__item--cta">
+        <a href="start-hosting/index.html">Start Hosting</a>
+      </li>
+    </ul>
+  </nav>
   <main>
     <section id="product-overview">
       <h1>Get the freedom you deserve.</h1>
@@ -293,5 +310,6 @@
             </ul>
         </nav>
     </footer>
+    <script src="assets/js/shared.js" charset="utf-8"></script>
 </body>
 </html>
