--- a/project/index.html
+++ b/project/index.html
@@ -6,8 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>CSS Course</title>
     <link rel="shortcut icon" href="assets/images/favicon.png">
-    <link href="https://fonts.googleapis.com/css?family=Oswald:400,700" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/shared.css">
     <link rel="stylesheet" href="assets/css/main.css">
 </head>
@@ -16,7 +14,7 @@
   <div class="modal">
     <h1 class="modal__title">Do you want to continue?</h1>
     <div class="modal__actions">
-      <a href="../start-hosting/index.html" class="modal__action">Yes!</a>
+      <a href="start-hosting/index.html" class="modal__action">Yes!</a>
       <button class="modal__action modal__action--negative" type="button" name="button">No!</button>
     </div>
   </div>
