--- a/project/start-hosting/index.html
+++ b/project/start-hosting/index.html
@@ -65,10 +65,12 @@
             <input type="email" id="email" required>
             <label for="password">Password</label>
             <input type="password" id="password" required>
-            <input type="checkbox" id="agree-terms" required>
-            <label for="agree-terms">Agree to
+            <div class="signup-form__chceckbox">
+              <input type="checkbox" id="agree-terms" required>
+              <label for="agree-terms">Agree to
                 <a href="#">Terms &amp; Conditions</a>
-            </label>
+              </label>
+            </div>
             <button type="submit" class="button">Sign Up</button>
         </form>
     </main>
